Fix: Ocean Curiosities Gap

--- a/pages/ocean-curiosities/styles.module.scss
+++ b/pages/ocean-curiosities/styles.module.scss
@@ -45,6 +45,7 @@
         flex-wrap: wrap;
         padding-top: 10rem;
         max-width: 128rem;
+        gap: 2rem;
     }
 
     }
